<resources>
    <string name="app_name">TI1.4-Applicatie</string>
    <string name="inlog_button">Log in</string>
    <string name="testRide_black_mamba_title">Black Mamba</string>
    <string name="testRide_black_mamba_type">Rollercoaster</string>
    <string name="testRide_black_mamba_information">Black mambas are fast, nervous, lethally venomous, and when threatened, highly aggressive.
        They have been blamed for numerous human deaths, and African myths exaggerate their capabilities to legendary proportions.
        For these reasons, the black mamba is widely considered the world’s deadliest snake.</string>
    <string name="testRide_dreamtown_title">Dreamtown</string>
    <string name="testRide_dreamtown_type">Relaxing ride</string>
    <string name="testRide_dreamtown_information">If there is something you can never get enough from, it is a carousel.</string>
    <string name="testRide_fire_machine_title">Fire Machine</string>
    <string name="testRide_fire_machine_type">Rollercoaster</string>
    <string name="testRide_fire_machine_information">Trucker Pete Shaw gives up his soul to become a hellblazing trucker,
        to fight against power hungry Jarrett,
        the son of the devil himself.
        They call him the Fire Machine. </string>
    <string name="testRide_spirit_realm_title">Spirit Realm</string>
    <string name="testRide_spirit_realm_type">Relaxing</string>
    <string name="testRide_spirit_realm_information">Thirty thousand years ago, the Heaven Fighting Race who called themselves “Gods” invaded Spirit Realm.
        Hundreds of races rose up in resistance, but ultimately suffered a crushing defeat.
        The Human Race was the first to concede, and the rest of the Hundred Races soon followed in succession.
        During the subsequent ten thousand years, all of the races were enslaved by the Heaven Fighting Race.
        They were cruelly treated, and lived beneath the shadow of terror.</string>
    <string name="wrong_login">Wrong ID</string>
    <string name="login_image_description">Generic picture</string>
    <string name="welcome_text">Welcome to the Essteling</string>
    <string name="Eread_name_parent">Name Parent/Guardian</string>
    <string name="phonenumber_text">Phonenumber</string>
    <string name="Eread_name_child">Name Child</string>
    <string name="Echoose_cardnumber">Card Number</string>
    <string name="Esetup_name_parent">Name</string>
    <string name="Esetup_surname_parent">Surname</string>
    <string name="Echoose_confirm_button">Confirm</string>
    <string name="error_no_data_returned">No activities yet to show.\nCheck if you put in the right phonenumber.</string>
    <string name="error_loading_data">Error whilst loading data</string>
    <string name="lv_kind_tijd">Your child was here at</string>
    <string name="Read">Read</string>
    <string name="Wrtie">Requested</string>
    <string name="diploma_visitedText1">You visited</string>
    <string name="diploma_visitedText2">times</string>

    <string name="get_diplome">Get your diploma!</string>
    <string name="text_diploma">I achieved my Essteling diploma!!!</string>
    <string name="employee_choose_request">Requested cards</string>
    <string name="no_nfc_supported">This device doesn\'t support NFC</string>
    <string name="nfc_off">NFC is turned off</string>
    <string name="waiting_server_response">Waiting for server response</string>
    <string name="tag_nfc_card">Tag NFC card</string>
    <string name="empty_field">Empty field</string>
    <string name="empty_fields">One or multiple fields are empty</string>
    <string name="wrong_emplyee_code">Wrong login code</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="wrong_credentials">Wrong credentials</string>
    <string name="employee_request_childname">Name child</string>
    <string name="request_phonenumber">Put in a phonenumber</string>
    <string name="saved">Saved</string>
    <string name="error_saved">Error while saving</string>
    <string name="done">Done</string>
    <string name="parent_menu_achievement">Show achievements</string>
    <string name="grats">Congratulations</string>
    <string name="diploma_tekst">You earned your Essteling diploma</string>
    <string name="achievement_blackmamba_ez">Check in at the Black Mamba at least 1 time.</string>
    <string name="achievement_blackmamba">Check in at the Black Mamba at least 5 times.</string>
    <string name="achievement_spirit_ez">Check in at the Spirit Realm at least 1 time.</string>
    <string name="achievement_spirit">Check in at the Spirit Realm at least 5 times.</string>
    <string name="achievement_fire_ez">Check in at the Fire Machine at least 1 time.</string>
    <string name="achievement_fire">Check in at the Fire Machine at least 5 times.</string>
    <string name="achievement_dream_ez">Check in at the Dreamtown at least 1 time.</string>
    <string name="achievement_dream">Check in at the Dreamtown at least 5 times.</string>
    <string name="achievement_allrides">Check in at all the Rides.</string>
    <string name="diploma_activity_text">Activities</string>
    <string name="diploma_achievement_text">Achievements</string>
</resources>
